Implement alert system with comprehensive test coverage
- Implement blood pressure alerts (trend and critical threshold)
- Implement blood saturation alerts (low saturation and rapid drop)
- Implement hypotensive hypoxemia combined alert
- Implement ECG abnormal peak detection with sliding window
- Implement manual/triggered alerts from HealthDataGenerator
- Add 36 unit tests covering all alert types
- Add JaCoCo for code coverage reporting
- Add exec-maven-plugin to allow running DataStorage class
- All tests passing with 100% success rate